...

    <!--    DEFAULT-->
    <string name="app_name">Location Reminder</string>
    <string name="no_data">No data</string>
    <string name="radius_in_meters">%d metres</string>

    <string name="all_fields_are_mandatory">All fields are mandatory!</string>

    <!--    BROADCAST INTENT EXTRAS-->
    <string name="broadcast_reminder_name_extra">ReminderName</string>
    <string name="broadcast_reminder_request_id_extra">requestId</string>

    <!--    GEOFENCE GENERAL -->
...
